--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,12 +2,15 @@
 
 {% block content %}
     <ul>
-    {% for object in object_list %}
-    <li>{{ object.user }}
-    {{ object.url }}
-    {{ object.description }}
-    {{ object.created }}
-    {{ object.hashid }}</li>
+    {% for bookmark in bookmark_list %}
+    <li>
+        {{ bookmark.description }}
+        <a href="{{ bookmark.url }}">emi.ly/{{ bookmark.hashid }}</a>
+        <span><a href="{% url 'update_view' pk=bookmark.id %}">edit</a> /</span>
+        <span><a href="{% url 'delete_view' pk=bookmark.id %}">delete</a></span>
+    </li> 
+
+
     {% endfor %}
 </ul>
 {% endblock %}
