--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,18 +1,39 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <ul>
-    {% for bookmark in object_list %}
-    <li>
-        {{ bookmark.description }}
-         <span><a href="{% url 'redirect_view' bookmark.hashid %}">emi.ly/{{ bookmark.hashid }}</a></span>
-        <span><a href="{% url 'update_view' pk=bookmark.id %}">edit</a> /</span>
-        <span><a href="{% url 'delete_view' pk=bookmark.id %}">delete</a></span>
-        <span>Click Count: {{ bookmark.click_count }}</span>
-    </li> 
 
+    <h4>bookmarks</h4>
+    <br>
+<div class="table-responsive">
+<table class="table">
+    <th>title</th>
+    <th>url</th>
+    <th>clicks</th>
+    <th>private</th>
+    <th>edit</th>
+    <th>delete</th>
+    <tbody></tbody>
+{% for bookmark in object_list %}
+        <tr>
+        <td>{{ bookmark.title }}</td>
+        <td><a href="{% url 'redirect_view' bookmark.hashid %}">emi.ly/{{ bookmark.hashid }}</a></td>
+        <td>{{ bookmark.click_count }}</td>
+         <td>{{ bookmark.private }}</td>
+        {% if bookmark.user == request.user %}
+            <td><a href="{% url 'update_view' pk=bookmark.id %}">edit</a></td>
+            <td><a href="{% url 'delete_view' pk=bookmark.id %}">delete</a></td>
+        {% else %}
+            <td></td>
+            <td></td>
+        {% endif %}
 
+        </tr>
     {% endfor %}
-</ul>
+
+</table>
+</div>
+
 {% endblock %}
+
+
 
