cleaning up and deploying

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,45 +8,80 @@
     <link rel="stylesheet" href="{% static 'short_url_app/main.css' %}">
 </head>
 <body>
-<div class="container">
+  <div id="wrap">
 
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"></button>
+    <nav class="navbar navbar-default">
+            <div class="container-fluid">
+              <!-- Brand and toggle get grouped for better mobile display -->
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"></button>
 
-    </div>
+              </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
+              <!-- Collect the nav links, forms, and other content for toggling -->
+              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                 <li><a href="{% url 'index_view' %}">home</a></li>
+                  {% if request.user.is_authenticated %}
+                  <li><a href="{% url 'create_bookmark_view' %}">create bookmark</a></li>
+                  <li><a href="{% url 'profile_view' %}">{{ user }}'s bookmarks</a></li>
+                  <ul class="nav navbar-nav navbar-right">
+                    <li><a href=""><em>signed in as {{user}}</em></a></li>
+                    <form class="navbar-form navbar-right" method="POST", action="{% url 'django.contrib.auth.views.logout' %}?next={% url 'index_view' %}">{% csrf_token %}
+                      <button type="submit" class="btn btn-default">logout</button>
+                    </form>
+                  </ul>
 
-          {% if request.user.is_authenticated %}
-            <li><a href="{% url 'index_view' %}">Home</a></li>
-            <li><a href="{% url 'create_bookmark_view' %}">Create Bookmark</a></li>
-            <li><a href="{% url 'profile_view' %}">Profile for {{ user }}</a></li>
-            <li><a href="{% url 'logout_view' %}?next={% url 'login_view' %}">Logout</a></li>
-          {% else %}
-            <li><a href="{% url 'create_user_view' %}">Create An Account</a></li>
-            <li><a href="{% url 'login_view' %}">Login</a></li>
+                  {% else %}
+                  <ul class="nav navbar-nav navbar-right">
+                    <form class="navbar-form navbar-right" method="POST", action="{% url 'django.contrib.auth.views.login' %}">{% csrf_token %}
+                      <div class="form-group">
+                        <input type="text" class="form-control" name='username' placeholder="Username">
+                      </div>
+                      <div class="form-group">
+                        <input type="password" class="form-control" name='password' placeholder="Password">
+                      </div>
+                      <button type="submit" class="btn btn-default">Login</button>
+                    </form>
+                    <li><a href="{% url 'create_user_view' %}">Register</a></li>
 
-          {% endif %}
+                  </ul>
+                 {% endif %}
 
-      </ul>
+                </ul>
 
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+              </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+          </nav>
 
 
-{% block header %}
-    <div class="page-header">
-    <h1>emi.ly <small>shorten your URLs: </small></h1>
-    </div>
-{% endblock %}
 
-{% block content %}
-    <h1>hello world</h1>
-{% endblock %}
-</div>
+
+
+
+  <div class="container">
+  {% block header %}
+      <div class="page-header">
+      <h1>emi.ly <small>shorten your URLs: </small></h1>
+      </div>
+  {% endblock %}
+
+  {% block content %}
+      <h1>hello world</h1>
+  {% endblock %}
+  </div>
+
+  </div>
+
+  <footer class='footer'>
+     <div class="container">
+       <div class="row">
+         <div class="col-sm-6">
+           <p class='text-left'>For demonstration purposes only.</p>
+         </div>
+         <div class="col-sm-6">
+           <p class='text-right'>Copyright © 2016 Emily Harris</p>
+         </div>
+       </div>
+     </div>
+   </footer>
