--- a/templates/short_url_app/bookmark_form.html
+++ b/templates/short_url_app/bookmark_form.html
@@ -1,9 +1,12 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
+
 
 {% block content %}
     <form action="" method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-        <input type="submit" name="Submit">
+    {{ form|crispy}}
+    <br>
+        <input class='btn btn-default' type="submit" name="Submit">
     </form>
 {% endblock %}
