--- a/templates/short_url_app/bookmark_confirm_delete.html
+++ b/templates/short_url_app/bookmark_confirm_delete.html
@@ -1,8 +1,12 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
+
 {% block content %}
+<h4>Are you sure you want to delete {{object.title}}?</h4>
 <form action=""method="post">
     {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Confirm Delete">
+    {{ form|crispy }}
+    <br>
+    <input class='btn btn-default' type="submit" value="Confirm Delete">
 </form>
 {% endblock %}
