--- a/templates/base.html
+++ b/templates/base.html
@@ -27,14 +27,14 @@
                   <li><a href="{% url 'profile_view' %}">{{ user }}'s bookmarks</a></li>
                   <ul class="nav navbar-nav navbar-right">
                     <li><a href=""><em>signed in as {{user}}</em></a></li>
-                    <form class="navbar-form navbar-right" method="POST", action="{% url 'django.contrib.auth.views.logout' %}?next={% url 'index_view' %}">{% csrf_token %}
+                    <form class="navbar-form navbar-right" method="POST", action="{% url 'logout_view' %}?next={% url 'index_view' %}">{% csrf_token %}
                       <button type="submit" class="btn btn-default">logout</button>
                     </form>
                   </ul>
 
                   {% else %}
                   <ul class="nav navbar-nav navbar-right">
-                    <form class="navbar-form navbar-right" method="POST", action="{% url 'django.contrib.auth.views.login' %}">{% csrf_token %}
+                    <form class="navbar-form navbar-right" method="POST", action="{% url 'login_view' %}">{% csrf_token %}
                       <div class="form-group">
                         <input type="text" class="form-control" name='username' placeholder="Username">
                       </div>
